# Rust-Lab

./: Cargo.toml  README.md
.github/workflows/: exercise-validation.yml  rust-ci.yml
docs/: ownership_explanation.md
exercises/concurrency/: concurrency_basics.rs  concurrency_basics_fixed.rs
exercises/error_handling/: error_handling_basics.rs  error_handling_basics_fixed.rs
exercises/memory_management/: memory_management.rs  memory_management_fixed.rs
exercises/ownership_borrowing/: ownership_basics.rs  ownership_basics_fixed.rs
exercises/performance/: performance_optimization.rs  performance_optimization_fixed.rs
scripts/: run_exercise.sh
tests/: concurrency_tests.rs  error_handling_tests.rs  memory_management_tests.rs  ownership_tests.rs  performance_tests.rs
